# wincent-rs

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.cn.md  README.md
.github/workflows/: archive.yml  publish.yml  release.yml
examples/: main.rs
examples/add_remove_file/: main.rs
examples/batch_operations/: main.rs
examples/builder_pattern/: main.rs
examples/console/: main.rs
examples/empty_quick_access/: main.rs
examples/pin_unpin_folder/: main.rs
examples/pinunpin/: main.rs
examples/query/: main.rs
examples/query_quick_access/: main.rs
examples/scripts/: handle_frequent_folder.ps1  list_quick_access.ps1  mock_quick_access.ps1  pinunpin_frequent_folder.ps1  refresh_explorer_windows.ps1  remove_recent_file.ps1
examples/show_hide_quick_access/: main.rs
src/: backend.rs  batch.rs  com.rs  com_thread.rs  empty.rs  error.rs  explorer_window.rs  feasible.rs  handle.rs  lib.rs  manager.rs  manual_shell_verb_tests.rs  monitor.rs  query.rs  quick_access_lock.rs  recent_links.rs  restore.rs  retry.rs  script_executor.rs  script_storage.rs  script_strategy.rs  scripts.rs  test_utils.rs  utils.rs  visible.rs
src/destlist/: cfb.rs  experimental_remove.rs  filter.rs  mod.rs  parser.rs  time.rs
tests/: intergration_test.rs
