[package]
name = "wincent"
version = "0.0.6"
authors = ["Hellager"]
edition = "2021"
repository = "https://github.com/Hellager/wincent-rs"
documentation = "https://docs.rs/wincent/"
readme = "README.md"
license = "MIT"
keywords = ["windows", "recent"]
categories = ["command-line-utilities"]
description = """
A library for handling windows quick access
"""

[dependencies]
sysinfo = "0.32.0"
tempfile = "3.14.0"
test-log = "0.2.16"
thiserror = "2.0.9"
winreg = "0.52.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_UI_Shell", 
    "Win32_Foundation",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-gnu"
targets = ["x86_64-pc-windows-gnu", "x86_64-pc-windows-msvc"]
