[package]
name = "wincent"
version = "0.1.1"
authors = ["Hellager"]
edition = "2021"
repository = "https://github.com/Hellager/wincent-rs"
documentation = "https://docs.rs/wincent/"
readme = "README.md"
license = "MIT"
keywords = ["windows", "recent"]
categories = ["command-line-utilities"]
description = """
A library for handling windows quick access
"""

[dependencies]
md5 = "0.7.0"
thiserror = "2.0.9"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "time", "macros", "sync"] }

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_System",
    "Win32_System_Com", 
    "Win32_UI_Shell", 
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Wdk_System_SystemServices",
    "Win32_System_Diagnostics_Debug"
]

[dev-dependencies]
test-log = "0.2.16"
serial_test = "3.2.0"
filetime = "0.2"
tempfile = "3.14.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-gnu"
targets = ["x86_64-pc-windows-gnu", "x86_64-pc-windows-msvc"]
