[package]
name = "wincent"
version = "0.2.5"
authors = ["Hellager"]
edition = "2021"
rust-version = "1.85"
repository = "https://github.com/Hellager/wincent-rs"
documentation = "https://docs.rs/wincent/"
readme = "README.md"
license = "MIT"
keywords = ["windows", "recent"]
categories = ["command-line-utilities"]
description = """
A library for handling windows quick access
"""

[dependencies]
md5 = "0.8.0"
thiserror = "2.0.18"
rand = "0.10.1"
winreg = "0.56.0"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_SystemInformation",
    "Win32_System_Variant",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Security",
]

[dev-dependencies]
test-log = "0.2.20"
serial_test = "3.4.0"
filetime = "0.2.29"
tempfile = "3.27.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-gnu"
targets = ["x86_64-pc-windows-gnu", "x86_64-pc-windows-msvc"]
